# deepagent-coder

./: .bandit  .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  README.md  config.example.yaml  debug_tool_calling.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml  test_json_parsing.py  test_mcp_client.py
.github/workflows/: ci.yml
docs/: code_navigator_agent_design.md  code_navigator_usage.md  design.md  devops_codereview_agents_plan.md
docs/plans/: 2025-01-25-code-navigator-agent.md  2025-11-23-deepagent-coding-assistant-part2.md  2025-11-23-deepagent-coding-assistant.md  INDEX.md  PLAN_SUMMARY.md
scripts/: format.sh  setup.sh  validate.sh
src/deepagent_claude/: coding_agent.py  main.py
src/deepagent_claude/cli/: chat_mode.py  commands.py  console.py  progress_tracker.py  streaming.py
src/deepagent_claude/core/: mcp_client.py  model_selector.py
src/deepagent_claude/mcp_servers/: git_server.py  linting_server.py  python_server.py  search_tools_server.py  testing_server.py
src/deepagent_claude/middleware/: audit_middleware.py  error_recovery_middleware.py  git_safety_middleware.py  logging_middleware.py  memory_middleware.py
src/deepagent_claude/subagents/: code_generator.py  code_navigator.py  debugger.py  refactorer.py  test_writer.py
src/deepagent_claude/utils/: file_organizer.py  memory_compactor.py  session_manager.py
src/deepagent_coder/: coding_agent.py  main.py
src/deepagent_coder/cli/: chat_mode.py  commands.py  console.py  progress_tracker.py
src/deepagent_coder/core/: config.py  mcp_client.py  model_selector.py
src/deepagent_coder/mcp_servers/: build_tools_server.py  code_metrics_server.py  container_tools_server.py  filesystem_server.py  git_server.py  linting_server.py  python_server.py  search_tools_server.py  shell_server.py  static_analysis_server.py  testing_server.py
src/deepagent_coder/middleware/: auto_mkdir_middleware.py  error_recovery_middleware.py  git_safety_middleware.py  memory_middleware.py
src/deepagent_coder/subagents/: code_generator.py  code_generator.py.bak  code_navigator.py  code_navigator.py.bak  code_reviewer.py  code_reviewer.py.bak  debugger.py  debugger.py.bak  devops.py  devops.py.bak  refactorer.py  refactorer.py.bak  test_writer.py  test_writer.py.bak
src/deepagent_coder/utils/: file_organizer.py  session_manager.py  tool_wrapper.py
tests/: test_coding_agent.py  test_devops_codereview_integration.py  test_directory_structure.py  test_main.py  test_performance.py  test_project_config.py
tests/cli/: __init__.py  test_chat_mode.py  test_commands.py  test_console.py  test_progress_tracker.py  test_streaming.py
tests/core/: test_config.py  test_mcp_client.py  test_model_selector.py  test_session_manager.py
tests/integration/: test_code_navigator_integration.py  test_e2e.py
tests/mcp_servers/: test_build_tools_server.py  test_code_metrics_server.py  test_container_tools_server.py  test_filesystem_server.py  test_git_server.py  test_linting_server.py  test_python_server.py  test_search_tools_server.py  test_shell_server.py  test_static_analysis_server.py  test_testing_server.py
tests/middleware/: __init__.py  test_audit_middleware.py  test_error_recovery_middleware.py  test_git_safety_middleware.py  test_logging_middleware.py  test_memory_middleware.py
tests/subagents/: test_code_generator.py  test_code_navigator.py  test_debugger.py  test_refactorer.py  test_test_writer.py
tests/utils/: test_file_organizer.py  test_memory_compactor.py  test_session_manager.py
