[project]
name = "deepagent-claude"
version = "0.1.0"
description = "Claude Code-like CLI using DeepAgent, Ollama, and MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.2.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "fastmcp>=0.2.0",
    "ollama>=0.3.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.2.1",
    "watchfiles>=0.21.0",
    "tomli>=2.0.1",
    "radon>=6.0.0",
    "bandit>=1.7.0",
    "vulture>=2.11",
    "pylint>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
deepagent-cli = "deepagent_coder.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepagent_coder"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (require external services like MCP servers)",
]
addopts = [
    "--cov=src/deepagent_coder",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=60",
    "-v",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["deepagent_coder"]
force_sort_within_sections = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from errors
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG", "F841"]  # Allow unused arguments and variables in tests
"src/deepagent_coder/cli/commands.py" = ["ARG002"]  # Allow unused args in command handlers
"src/deepagent_coder/coding_agent.py" = ["E722"]  # Allow bare except for JSON parsing
"src/deepagent_coder/subagents/code_generator.py" = ["ARG001"]  # Allow unused args for API compatibility
"src/deepagent_coder/utils/tool_wrapper.py" = ["ARG001"]  # Allow unused args for API compatibility

[tool.ruff.lint.isort]
known-first-party = ["deepagent_coder"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B601"]  # B101: assert_used, B601: paramiko_calls

[dependency-groups]
dev = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "coverage[toml]>=7.4.0",
]

[tool.coverage.run]
source = ["src/deepagent_coder"]
omit = [
    "tests/*",
    "src/deepagent_coder/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
